<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89989E">



    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/m1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bar2"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/shp"
            android:layout_margin="22dp">


            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:src="@drawable/appiconn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/txtApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LUNG AI"
                android:textColor="#9F5C4D"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgIcon"/>


            <TextView
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starttxt1"
                app:layout_constraintTop_toBottomOf="@id/txtApp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="22dp"/>

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/starttxt2"
                app:layout_constraintTop_toBottomOf="@id/txt1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="22dp"/>


            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/starttxt3"
                app:layout_constraintTop_toBottomOf="@id/txt2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="22dp"/>




        </androidx.constraintlayout.widget.ConstraintLayout>





        <LinearLayout
            android:id="@+id/bar2"
            android:layout_marginTop="22dp"
            android:layout_marginHorizontal="22dp"
            app:layout_constraintTop_toBottomOf="@id/bar1"
            app:layout_constraintBottom_toTopOf="@id/bar3"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="210dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1">

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:background="@drawable/shape_top_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_main1"
                        android:textSize="18sp"
                        android:textColor="#9F5C4D"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_top_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textSize="18sp"
                        android:textColor="#9F5C4D"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:background="@drawable/shape4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnStart"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textSize="24sp"
                    android:textColor="#9F5C4D"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1">

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_bottom_left"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_main2"
                        android:textSize="18sp"
                        android:textColor="#9F5C4D"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_bottom_right"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textSize="18sp"
                        android:textColor="#9F5C4D"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>



<LinearLayout
    android:id="@+id/bar3"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_margin="22dp"
    android:layout_height="66dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/shape_left">

        <CheckBox
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/start2"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            android:textSize="12sp"
            android:id="@+id/checkbox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:background="@drawable/shape_right"
        android:layout_weight="2">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/russia"
            android:id="@+id/img"/>

    </LinearLayout>


</LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>