<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/back_style_result"
    android:orientation="vertical">

    <FrameLayout

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/back_style_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/language"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageView

            android:id="@+id/cancel"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="14dp"
            android:background="@drawable/back_style_cancel"
            android:clickable="true"
            android:padding="5sp"
            android:src="@drawable/ic_baseline_cancel_24" />

    </FrameLayout>

    <FrameLayout

        android:id="@+id/uz"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_style_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout

            android:id="@+id/pictures"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_style_image"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/uzb" />

        </LinearLayout>

        <TextView

            android:id="@+id/uzText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uzbek"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView

            android:id="@+id/uzImage"
            android:layout_width="26dp"
            android:layout_gravity="center|end"
            android:layout_height="26dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_check_24" />

    </FrameLayout>


    <FrameLayout

        android:id="@+id/ru"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back_style_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_style_image"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rus" />

        </LinearLayout>

        <TextView

            android:id="@+id/ruText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/russian"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView

            android:id="@+id/ruImage"
            android:layout_width="26dp"
            android:layout_gravity="center|end"
            android:layout_height="26dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />

    </FrameLayout>





</LinearLayout>